    "set_timezone" option on the foreign server.
    Thanks to Sébastien Caunes for help with this.
  - Make auto_explain work with oracle_fdw.  This used to cause an error:
    oracleQueryPlan internal error: statement handle is not NULL
    Report by "Jaisus" and Sébastien Caunes.  Sébastien provided the essential
    clue that the problem is related to auto_explain.

  Enhancements:
  - Skip Oracle savepoint management if the foreign server option
    "isolation_level" is set to "read_only" or if we are inside a read-only
    PostgreSQL transaction.  This saves some round trips and avoids Oracle
    errors that might be thrown when entering a PL/pgSQL exception handler.
    Per suggestion from "math-g".
  - Use explicit bulk fetching into arrays rather than OCI prefetching for
    Oracle SELECT statements.  This greatly improves performance for LOB
    and LONG columns, since OCI prefetching didn't work if these data types.
    The limitation still applies for SDO_GEOMETRY columns.  A new option
    "lob_prefetch" is used to configure how much of the LOBs is fetched
    with the rows to reduce the number of round trips.  This enhancement
    was generously sponsored by Mipih (https://www.mipih.fr/).
    Thanks for Philippe Florent for help and testing!

Version 2.5.0, released 2022-10-28

  Bugfixes:
  - Use the correct user mapping for views on foreign tables.
    This should use the mapping associated with the view owner.
    Reported by "JSilex".
  - Fix a spurious error on UPDATE or DELETE if the column options "key" and
    "strip_zeros" are used on the same column.
    Report and patch by Noriyoshi Shinoda.
  - Fix "out of memory" and other errors on Linux systems with FIPS enabled.
    The cause is that calculating MD5 hashes on such systems causes errors.
    Reported by Hank Drews.
  - Handle Oracle's TIMESTAMP WITH LOCAL TIME ZONE correctly.
    Oracle converts such values to its session time zone on output, but does not